feat(Application): SpringBoot 3 upgrade (#311)
Requires updates to application.properties (see PR comments)
Upgrade Tomcat minimum requirements to 10