@@ -33,7 +33,7 @@ import java.sql.Timestamp;
 import java.text.DateFormat;
 import java.util.*;
 
-import javax.mail.MessagingException;
+import jakarta.mail.MessagingException;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.HttpStatus;
@@ -225,7 +225,7 @@ public class DailyAdminJob {
       String username = appProperties.getProperty("spring.datasource.username");
       String password = appProperties.getProperty("spring.datasource.password");
       String url = appProperties.getProperty("spring.datasource.url");
-      Class.forName("com.mysql.cj.jdbc.Driver").newInstance();
+      Class.forName("com.mysql.cj.jdbc.Driver").getDeclaredConstructor().newInstance();
       Connection conn = DriverManager.getConnection(url, username, password);
       Statement statement = conn.createStatement();
       JSONObject vleStatistics = new JSONObject();
