@@ -1,6 +1,5 @@
 package org.wise.portal.presentation.web.controllers.admin;
 
-import junit.framework.TestCase;
 import org.apache.commons.io.IOUtils;
 import org.easymock.EasyMock;
 import org.easymock.EasyMockExtension;
@@ -17,7 +16,7 @@ import org.wise.portal.service.project.ProjectService;
 import java.io.IOException;
 
 @ExtendWith(EasyMockExtension.class)
-public class ManagePortalControllerTest extends TestCase {
+public class ManagePortalControllerTest {
 
   @TestSubject
   private ManagePortalController controller = new ManagePortalController();
@@ -32,9 +31,9 @@ public class ManagePortalControllerTest extends TestCase {
   public void addOfficialTagToProjectLibraryGroup_OK() throws JSONException, IOException {
     String projectLibraryGroupJSONString = IOUtils
         .toString(this.getClass().getResourceAsStream("/projectLibraryGroupSample.json"), "UTF-8");
-    EasyMock.expect(projectService.addTagToProject("official", new Long(24447))).andReturn(1);
-    EasyMock.expect(projectService.addTagToProject("official", new Long(24449))).andReturn(1);
-    EasyMock.expect(projectService.addTagToProject("official", new Long(24358))).andReturn(1);
+    EasyMock.expect(projectService.addTagToProject("official", Long.valueOf(24447))).andReturn(1);
+    EasyMock.expect(projectService.addTagToProject("official", Long.valueOf(24449))).andReturn(1);
+    EasyMock.expect(projectService.addTagToProject("official", Long.valueOf(24358))).andReturn(1);
     EasyMock.replay(projectService);
     controller.addOfficialTagToProjectLibraryGroup(projectLibraryGroupJSONString);
     EasyMock.verify(projectService);
